# calista

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  NOTICE  README.md  git-flow.md  how_to_run_tests.md  pre-commit.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  doc_suggestions.yaml  feature_request.yaml
.github/scripts/: decrypt_params.sh
.github/workflows/: tests.yml
calista/: __init__.py  _print_versions.py  group.py  table.py
calista/core/: _aggregate_conditions.py  _conditions.py  aggregates.py  catalogue.py  database.py  engine.py  functions.py  metrics.py  rules.py  types_alias.py  utils.py
calista/engines/: bigquery.py  pandas_.py  polars_.py  snowflake.py  spark.py  sql.py
docs/: api.rst  calistaengine.rst  calistatable.rst  conf.py  contributing.rst  functions.rst  getting_started.rst  grouped_table.rst  index.rst  intro.rst  requirements.txt
docs/api/: calista.core.functions.column_equal_to_column.rst  calista.core.functions.column_equal_to_value.rst  calista.core.functions.column_ge_column.rst  calista.core.functions.column_ge_value.rst  calista.core.functions.column_gt_column.rst  calista.core.functions.column_gt_value.rst  calista.core.functions.column_le_column.rst  calista.core.functions.column_le_value.rst  calista.core.functions.column_lt_column.rst  calista.core.functions.column_lt_value.rst  calista.core.functions.compare_agg_column_to_value.rst  calista.core.functions.compare_column_to_column.rst  calista.core.functions.compare_column_to_value.rst  calista.core.functions.compare_length.rst  calista.core.functions.compare_year_to_value.rst  calista.core.functions.count_decimal_digit.rst  calista.core.functions.count_eq_value.rst  (+67 more)
ressources/: TEST_DATASET_100.csv  TEST_DATASET_100.json  TEST_DATASET_100.parquet  TEST_DATASET_100_2.parquet  test-calista-47a4ab54cd29.json  test-calista-47a4ab54cd29.json:Zone.Identifier
tests/table/: conftest.py  (+5 more)
(+2 files in other folders)
